# ave

./: .gitignore  .gitleaks.toml  ARCHITECTURE.md  AVE_ORG_MOVE_CHECKLIST.md  AVE_PROJECT_CLEANUP_TASKS.md  AVE_V1.1.0_MIGRATION_BRIEF.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  GOVERNANCE.md  LANGUAGE.md  OWASP_MCP_MAPPING.md  PRODUCT.md  README.md  SECURITY.md  SPEC.md  ave-records-v1.1.0.json  package-lock.json  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_ave_submission.md  02_false_positive.md  03_schema_change.md  04_bug_report.md
.github/workflows/: codeql.yml  dependency-review.yml  notify-ave-site.yml  regenerate-records-json.yml  scorecard.yml  secret-scan.yml  tests.yml
crosswalks/: ave-to-ast10.json  ave-to-ast10.md  ave-to-owasp-mcp.md  cfgaudit-to-ave.json  cfgaudit-to-ave.md  clawscan-to-ave.json  clawscan-to-ave.md  skillspector-to-ave.json  skillspector-to-ave.md
docs/adr/: 0001-behavioral-fingerprints.md  (+2 more)
records/: AVE-2026-00001.json  AVE-2026-00002.json  AVE-2026-00003.json  AVE-2026-00004.json  AVE-2026-00005.json  AVE-2026-00006.json  AVE-2026-00007.json  AVE-2026-00008.json  AVE-2026-00009.json  AVE-2026-00010.json  AVE-2026-00011.json  AVE-2026-00012.json  AVE-2026-00013.json  AVE-2026-00014.json  AVE-2026-00015.json  AVE-2026-00016.json  AVE-2026-00016.md  AVE-2026-00017.json  AVE-2026-00017.md  AVE-2026-00018.json  AVE-2026-00018.md  AVE-2026-00019.json  AVE-2026-00019.md  AVE-2026-00020.json  AVE-2026-00020.md  AVE-2026-00021.json  AVE-2026-00021.md  AVE-2026-00022.json  AVE-2026-00022.md  AVE-2026-00023.json  AVE-2026-00023.md  AVE-2026-00024.json  AVE-2026-00024.md  AVE-2026-00025.json  AVE-2026-00025.md  AVE-2026-00026.json  AVE-2026-00026.md  AVE-2026-00027.json  AVE-2026-00027.md  AVE-2026-00028.json  (+49 more)
schema/: ave-record-1.0.0.schema.json  ave-record-1.1.0.schema.json  ave-record.schema.json
scripts/: backfill-evidence.js  build-records.js  check_fixtures.py  check_rule_coverage.py  enrich_v1_1_0_draft.py  generate-rules-and-fixtures.js  insert_references.py  merge-evidence-declarations.js  migrate-records.js  migrate_v1_1_0.py  migrate_v1_1_0_behavioral_vector.py  migrate_v1_1_0_hygiene.py  validate_records.py
tests/: test_fixtures.py
(+205 files in other folders)
