[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bawbel-ave"
version = "1.1.0"
description = "AVE — Agentic Vulnerability Enumeration standard"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jsonschema>=4.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]