[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bawbel-ave"
version = "1.2.0"
description = "AVE — Agentic Vulnerability Enumeration standard"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "jsonschema>=4.23",
]

# Not a Python library -- nothing here imports "bawbel_ave" as a package.
# scripts/ are run directly (python scripts/foo.py) and tests/ check
# records and fixtures directly. This pyproject.toml exists for dependency
# and pytest config only, so tell setuptools there's no package to
# discover/build.
[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]